logging with raven, analytics and more user stuff

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -6,6 +6,7 @@
   },
   "LOGIN": {
     "LOGIN": "Einloggen",
+    "LOGOUT": "Ausloggen",
     "SIGN_UP": "Anmelden",
     "LOGIN_ERROR_MSG": "Die angegebenen Login-Daten sind ungültig. Bitte überprüfen Sie ihre E-Mail Adresse und das Passwort."
   },
@@ -13,6 +14,11 @@
     "FIRST_NAME": "Vorname",
     "LAST_NAME": "Nachname",
     "PASSWORD": "Passwort",
-    "E_MAIL": "E-Mail"
+    "E_MAIL": "E-Mail",
+    "BUSINESS": "Business",
+    "PRIVATE": "Privat"
+  },
+  "MENU": {
+    "TITLE": "Navigation"
   }
 }
