cache offline changes and sync on next sync

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -3,7 +3,8 @@
     "ERROR": "Fehler",
     "OK": "Ok",
     "CANCEL": "Abbrechen",
-    "LOADING": "Bitte warten..."
+    "LOADING": "Bitte warten...",
+    "SYNC": "Synchronisation"
   },
   "LOGIN": {
     "LOGIN": "Einloggen",
