some small UI fixes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -53,7 +53,8 @@
     "ADDRESS_SHORT": "mail-in address",
     "INTRO": "Please insert your Evernote mail-in address to activate this feature.",
     "REQUIRE_TOKEN": "Require security token",
-    "RESET_TOKEN": "Reset security token"
+    "RESET_TOKEN": "Reset security token",
+    "NOTEBOOKS": "Notebooks"
   },
   "PAYMENT": {
     "TITLE": "Payment"
