--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -75,5 +75,16 @@
   },
   "ZENDESK": {
     "SUPPORT": "Support"
+  },
+  "ADDRESS": {
+    "CHANGE": "Change Address",
+    "COMPANY": "Company",
+    "FIRST_NAME": "First name",
+    "LAST_NAME": "Last name",
+    "ADDRESS": "Address",
+    "ADDRESS_EXTRA": "Address line 2 (optional)",
+    "ZIP_CODE": "Zip code",
+    "STATE": "State / Province",
+    "COUNTRY": "Country"
   }
 }
