first consition/action edits

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -42,7 +42,8 @@
     "STACK": "Stack",
     "ACTIONS": "Actions",
     "CONDITIONS": "Conditions",
-    "ACTIVE": "Active"
+    "ACTIVE": "Active",
+    "NEGATE": "Negate condition"
   },
   "CALENDAR": {
     "TITLE": "Calendar",
