CSP, plash and icon

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -55,7 +55,7 @@
     "TITLE": "Filter",
     "MY": "Personal filters",
     "GLOBAL": "Business-wide filters",
-    "NO_STACK": "empty stack",
+    "NO_STACK": "uncategorized",
     "NAME": "Name",
     "STACK": "Stack",
     "ACTIONS": "Actions",
