splash scree, icons, app title, login bug

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -93,6 +93,7 @@
     "0": "Free",
     "1": "Plus",
     "2": "Premium",
+    "undefined": "",
     "BUSINESS": "Business",
     "CURRENT_PLAN": "Current plan",
     "SUBSCRIPTION": "Subscription",
@@ -116,7 +117,8 @@
     "MONTH": "month",
     "YEAR": "year",
     "BILLING_ADDRESS": "Billing address",
-    "ORDER": "Order"
+    "ORDER": "Order",
+    "ORDER_NOW": "Order Now"
   },
   "LIBRARY": {
     "TITLE": "Library"
